Update demo data with imgUrl from Cloudinary

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   <title>ChefOfChief</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="\img\baker.png">
+  <link rel="icon" type="image/x-icon"
+    href="https://res.cloudinary.com/dvykycdey/image/upload/v1739096545/baker_z1ejyu.png">
 </head>
 
 <body>
